
- GPR#1467: Allow expressions sequences inside extended indexing and bigarray
  indexing operators, e.g.: e1.![e2; e3; ...], etc.
  (Nicolas Ojeda Bar, review by Gabriel Radanne, Damien Doligez, Gabriel
  Scherer)

### Type system:

- GPR#1370: Fix code duplication in Cmmgen
  (Vincent Laviron, with help from Pierre Chambart,
   reviews by Gabriel Scherer and Luc Maranget)

- GPR#1516: Allow float array construction in recursive bindings
  when configured with -no-flat-float-array
  (Jeremy Yallop, report by Gabriel Scherer)

### Standard library:

### Other libraries:

* GPR#1406: Unix.isatty now returns true in the native Windows ports when
  passed a file descriptor connected to a Cygwin PTY. In particular, compiler
  colors for the native Windows ports now work under Cygwin/MSYS2.
  (Nicolas Ojeda Bar, review by Gabriel Scherer, David Allsopp, Xavier Leroy)

- GPR#1477: raw_spacetime_lib can now be used in bytecode.
  (Nicolas Ojeda Bar, review by Mark Shinwell)

### Compiler user-interface and warnings:

- GPR#1166: In OCAMLPARAM, an alternative separator can be specified as
  first character (instead of comma) in the set ":|; ,"
  (Fabrice Le Fessant)

- GPR#1428: give a non dummy location for warning 49 (no cmi found)
  (Valentin Gatien-Baron)

- GPR#1472: Improve error reporting for missing 'rec' in let-bindings
  (Arthur Charguéraud and Armaël Guéneau, with help from Gabriel Scherer and
  Frédéric Bour)

- GPR#1496: Refactor the code printing explanation for unification type errors,
  in order to avoid duplicating pattern matches
  (Armaël Guéneau, review by Florian Angeletti and Gabriel Scherer)

- GPR#1505: Add specific error messages for unification errors involving
  functions of type "unit -> _"
  (Arthur Charguéraud and Armaël Guéneau, with help from Leo White, review by
  Florian Angeletti and Gabriel Radanne)

### Code generation and optimizations:

### Runtime system:

- GPR#1431: remove ocamlrun dependencies on curses/terminfo/termcap C library