@@ -162,9 +162,11 @@ type ('a, 'p) t = private 'a s
 type 'a packed = T : ('a, _) t -> 'a packed [@@unboxed]
 ;;
 
-
 (* MPR#7682 *)
-
 type f = {field: 'a. 'a list} [@@unboxed];;
 let g = Array.make 10 { field=[] };;
 let h = g.(5);;
+
+(* Using [@@immediate] information (GPR#1469) *)
+type 'a t [@@immediate];;
+type u = U : 'a t -> u [@@unboxed];;
